fixing images overlapping

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -157,7 +157,20 @@
 .app-content .user2match{
 	text-align: right;
 	padding-right: 7px;
-	float:right;
+	overflow: hidden;
+	position: relative;
+}
+.app-content .user1match img{
+	width:150px;
+}
+.app-content .user1match p{
+	width:150px;
+}
+.app-content .user2match p{
+	width:150px;
+}
+.app-content .user2match img{
+	width:150px;
 }
 #user1name{
 	text-align: center;
